# WhisperNow

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  installer.iss  main.py  main_legacy.py  pyproject.toml  transcribe.spec
.github/workflows/: build.yml
scripts/: build.py  test_batched_install.py
src/transcribe/: __init__.py  __main__.py  app.py  application.py
src/transcribe/core/: __init__.py  audio_processor.py  backends.py  config.py  hotkey.py  llm_processor.py  model_loader.py  recorder.py  settings.py  transcriber.py  vocabulary_processor.py
src/transcribe/core/asr/: __init__.py  backends.py  model_loader.py  model_utils.py  transcriber.py  transcription_worker.py
src/transcribe/core/audio/: __init__.py  audio_processor.py  recorder.py
src/transcribe/core/input/: __init__.py  hotkey.py
src/transcribe/core/llm/: llm_processor.py
src/transcribe/core/output/: __init__.py  text_output.py
src/transcribe/core/settings/: __init__.py  config.py  settings.py
src/transcribe/core/transcript_processor/: __init__.py  llm_processor.py  vocabulary_processor.py
src/transcribe/ui/: __init__.py  download_dialog.py  main_window.py  permissions_dialog.py  recording_toast.py  setup_wizard.py  tray.py
src/transcribe/ui/tabs/: __init__.py  configuration_tab.py  enhancement_edit_dialog.py  enhancements_tab.py  history_tab.py  home_tab.py  vocabulary_tab.py
src/transcribe/utils/: __init__.py  logger.py  platform.py
src/whispernow/: __init__.py  __main__.py  app.py  bootstrap.py  config.py
src/whispernow/core/: __init__.py
src/whispernow/core/asr/: __init__.py  backends.py  file_utils.py  model_downloader.py  model_loader.py  model_registry.py  model_utils.py  models.json  transcriber.py  transcription_worker.py
src/whispernow/core/asr/models/: __init__.py  downloader.py  loader.py  models.json  registry.py
src/whispernow/core/audio/: __init__.py  audio_processor.py  recorder.py
src/whispernow/core/input/: hotkey.py  mac_listener.py
src/whispernow/core/output/: text_output.py
src/whispernow/core/settings/: data_manager.py  settings.py  uninstaller.py
src/whispernow/core/transcript_processor/: __init__.py  enhancement_prompts.json  llm_processor.py
src/whispernow/ui/: dependency_setup_page.py  download_dialog.py  main_window.py  permissions_dialog.py  recording_toast.py  setup_wizard.py  tray.py
src/whispernow/ui/tabs/: __init__.py  configuration_tab.py  enhancement_edit_dialog.py  enhancements_tab.py  history_tab.py  home_tab.py
src/whispernow/utils/: cleanup.py  logger.py  platform.py
tests/: __init__.py  conftest.py  test_audio_processor.py  test_backends.py  test_cleanup.py  test_dependency_batch.py  test_dependency_manager_mock.py  test_integration.py  test_llm_processor.py  test_logger.py  test_model_downloader.py  test_recorder.py  test_settings.py  test_transcriber.py  test_vocabulary_processor.py
