[project]
name = "transcribe"
version = "0.1.0"
description = "Push-to-talk speech transcription desktop app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nemo-toolkit[asr]>=2.6.0",
    "pynput>=1.8.1",
    "PySide6>=6.6.0",
    "scipy>=1.16.3",
    "sounddevice>=0.5.3",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
]

[project.optional-dependencies]
# HuggingFace Transformers backend (for Whisper, Wav2Vec2, etc.)
huggingface = [
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
]
# Install all backends
all = [
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
]

[project.gui-scripts]
transcribe = "transcribe.app:main"

[project.scripts]
transcribe-cli = "transcribe.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
]

[tool.uv]
override-dependencies = [
    "ml_dtypes>=0.5.4",
]
