[project]
name = "whispernow"
version = "0.1.0"
description = "Push-to-talk speech transcription desktop app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core dependencies - bundled with installer
    "platformdirs>=4.5.1",
    "pydantic>=2.12.5",
    "pynput>=1.8.1",
    "PySide6-Essentials>=6.6.0",
    "sounddevice>=0.5.3",
    "numpy>=1.26.0",
    "sherpa-onnx>=1.12.21",
    "litellm>=1.80.16",
]



[project.gui-scripts]
whispernow = "whispernow.bootstrap:main"

[project.scripts]
whispernow-cli = "whispernow.bootstrap:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "briefcase>=0.3.26",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
    "pyside6>=6.10.1",
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# ============================================================================
# Briefcase Configuration
# ============================================================================
[tool.briefcase]
project_name = "WhisperNow"
bundle = "com.whispernow"
version = "0.1.0"
author = "WhisperNow"
license.text = "MIT"

[tool.briefcase.app.whispernow]
formal_name = "WhisperNow"
description = "Push-to-talk speech transcription desktop app"
sources = ["src/whispernow"]
requires = [
    "platformdirs>=4.5.1",
    "pydantic>=2.12.5",
    "pynput>=1.8.1",
    "PySide6-Essentials>=6.6.0",
    "sounddevice>=0.5.3",
    "numpy>=1.26.0",
    "sherpa-onnx>=1.12.21",
    "litellm>=1.80.16",
]

[tool.briefcase.app.whispernow.linux.appimage]
manylinux = "manylinux_2_28"
